--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,12 @@
 {
-	"routes": [
+	"rewrites": [
 		{
-			"src": "/api/generate_params",
-			"dest": "/api/generate_params.py"
+			"source": "/api/generate_params",
+			"destination": "/api/generate_params.py"
 		},
 		{
-			"src": "/(.*)",
-			"dest": "/public/$1"
+			"source": "/(.*)",
+			"destination": "/public/$1"
 		}
 	],
 	"headers": [
@@ -28,7 +28,7 @@
 			]
 		}
 	],
-	"functions": { 
+	"functions": {
 		"api/generate_params.py": {
 			"runtime": "python3.10",
 			"memory": 1024,
@@ -36,4 +36,3 @@
 		}
 	}
 }
-
