--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,3 @@
-librosa==0.10.1
+# 移除 Librosa/SciPy，仅保留必要依赖
 numpy==1.26.4
-scipy==1.11.4
-starlette==0.37.2
 python-multipart==0.0.6
-soundfile==0.12.1
